# short_And

./: README.md  main.py  pyproject.toml
templates/: main.html  result.html
